manifests/account-service_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-app-poc
  namespace: accountservice
  labels:
    app.kubernetes.io/instance: microservice-app-poc-node
    app.kubernetes.io/name: microservice-account-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: microservice-app-poc-node
      app.kubernetes.io/name: microservice-account-service-app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: microservice-app-poc-node
        app.kubernetes.io/name: microservice-account-service-app
    spec:
      containers:
        - name: account-service-app
          image: IMAGE_VERSION
          ports:
            - containerPort: 8080
