manifests/account-service_node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service-app-poc
  labels:
    app.kubernetes.io/instance: microservice-app-poc-node
    app.kubernetes.io/name: microservice-account-service-app
  annotations:
  namespace: accountservice
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: microservice-app-poc-node
    app.kubernetes.io/name: microservice-account-service-app
