manifests/account-service_node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/instance: microservice-app-poc-node
    app.kubernetes.io/name: microservice-account-service-app
  name: account-service-app-poc
  namespace: accountservice
spec:
  rules:
  - host: microservice-poc-node.lgcomusdev.lge.com
    http:
      paths:
      - backend:
          service:
            name: account-service-app-poc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
